# stripalerts-esp32

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.json.example  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  pages.yml
boards/STRIPALERTS/: board.json  manifest.py  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
boards/STRIPALERTS_S3/: board.json  manifest.py  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
firmware/: .gitignore
frontend/: app.js  ble-client.js  index.html  manifest.json  privacy.html  qr-scanner-worker.min.js  style.css  wrangler.jsonc
frontend/stripalerts/: app.js  privacy.html  qr-scanner.min.js  sw.js
frontend/stripalerts/.well-known/: assetlinks.json
frozen/: manifest.py
frozen/stripalerts/: __init__.py  api.py  app.py  ble.py  config.py  constants.py  events.py  led.py  ota.py  utils.py  wifi.py
lib/stripalerts/: api.py  app.py  ble.py  constants.py  events.py  led.py  utils.py
modules/stripalerts/: __init__.py  api.py  app.py  ble.py  board_config.py  config.py  constants.py  events.py  led.py  utils.py  wifi.py
src/: boot.py  main.py
src/stripalerts/: __init__.py  app.py  led.py
tools/: __init__.py  __main__.py  build.py  builder.py  clean.py  cleaner.py  cli.py  config.py  console.py  deploy.py  device.py  exceptions.py  monitor.py  subprocess_utils.py  upload.py  uploader.py  utils.py
