[project]
name = "stripalerts"
version = "0.1.0"
description = "MicroPython for the Chaturbate Events API on ESP32"
readme = "README.md"
authors = [
    { name = "MountainGod2", email = "admin@reid.ca" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "esptool==4.11.0",
    "mpremote==1.27.0",
    "pyserial==3.5",
    "ruff==0.15.0",
]

[project.optional-dependencies]
# uv pip install -r pyproject.toml --extra stubs --target typings
stubs = [
  "micropython-esp32-stubs==1.27.0.*"
]

[tool.ruff]
exclude = ["firmware", "typings", ".*", "__*"]
target-version = "py39"
line-length = 88
lint.select = ["E", "F", "W", "I", "PYI"]
format.quote-style = "double"
format.indent-style = "space"
lint.per-file-ignores = { "boards/STRIPALERTS_S3/manifest.py" = ["F821"] }

[tool.pyright]
include = ["src", "lib"]
exclude = [".*", "__*", "**/typings"]
typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.9"
reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "information"

[tool.mypy]
platform = "linux"
python_version = "3.9"
mypy_path = "typings"
custom_typeshed_dir = "typings"
files = "src, lib"
exclude = [
    "typings[\\/].*", # TOML basic string 
]
follow_imports = "silent"
follow_imports_for_stubs = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "aioble"
ignore_missing_imports = true
