[project]
name = "stripalerts"
version = "0.1.0"
description = "MicroPython for the Chaturbate Events API on ESP32"
readme = "README.md"
authors = [{ name = "MountainGod2", email = "admin@reid.ca" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build==0.10.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stripalerts"
module-root = "modules"

[project.optional-dependencies]
# uv pip install -r pyproject.toml --extra stubs --target typings
stubs = ["micropython-esp32-stubs==1.27.0.*"]
# uv pip install -r pyproject.toml --extra dev
dev = [
    "esptool==5.1.0",
    "mpremote==1.27.0",
    "pre-commit==4.5.1",
    "pyserial==3.5",
    "ruff==0.15.1",
    "rich==14.3.2",
    "typer==0.24.0",
    "mypy==1.19.1",
]

[tool.ruff]
exclude = ["micropython", "typings"]
target-version = "py39"
line-length = 100
lint.select = ["E", "F", "W", "I", "PYI", "PERF", "RUF", "FBT", "D"]
lint.ignore = ["D203", "D213", "RUF005","RUF037"]
lint.per-file-ignores = { "boards/*/manifest.py" = [
    "F821",
], "tools/*.py" = [
    "FBT001",
    "FBT002",
], "tools/subprocess_utils.py" = [
    "PERF203",
] }
lint.pydocstyle.convention = "google"
format.quote-style = "double"
format.indent-style = "space"

[tool.pyright]
include = ["src", "modules"]
exclude = [".*", "__*", "**/typings"]
typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.9"
reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "information"

[tool.mypy]
platform = "linux"
python_version = "3.9"
mypy_path = "typings"
custom_typeshed_dir = "typings"
files = "src, modules"
exclude = [
    "typings[\\/].*", # TOML basic string
]
follow_imports = "silent"
follow_imports_for_stubs = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "aioble"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp"
ignore_missing_imports = true
